# photo-search-cli

./: .gitignore  README.md  REPAIR_RESTORE_DB.md
docs/: architecture.md  run-api-on-mac-studio.md
infra/: README.md
infra/api/: Chart.yaml  values.yaml  values.yaml.example
infra/api/templates/: _helpers.tpl  certificate.yaml  configmap.yaml  deployment.yaml  ingress.yaml  pv-thumbs.yaml  pv.yaml  pvc-thumbs.yaml  pvc.yaml  service.yaml
infra/ollama/: Chart.yaml  values.yaml  values.yaml.example
infra/photo-api/: Chart.yaml  values.yaml.example
infra/photo-web/: Chart.yaml  values.yaml.example
infra/photos-pv/: Chart.yaml  values.yaml.example
infra/postgres/: Chart.yaml  values.yaml.example
infra/qdrant/: Chart.yaml  values.yaml.example
infra/web/: Chart.yaml  values.yaml  values.yaml.example
photo-search/: .dockerignore  Dockerfile  config.yaml.example  pyproject.toml  requirements.txt
photo-search/api/: __init__.py  app.py  paths.py  requirements.txt  routes.py  schemas.py  thumbnails.py
photo-search/photo_search/: __init__.py  caption.py  cli.py  config.py  embed.py  exif.py  faces.py  geo.py  geocode.py  models.py  pipeline.py  storage.py
photo-search/scripts/: backup_db.py  diagnose_embed_prefix.py  init_db.sql  repair_qdrant_payloads.py  restore_db.py  strip_caption_markdown.py
photo-search/tests/: test_caption.py  test_embed.py  test_exif.py  test_faces.py  test_pipeline.py  test_storage.py
web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
(+46 files in other folders)
